--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body class="bg-[#09090A] bg-cover bg-center font-mono text-white overflow-x-hidden" style="background-image: url('./assets/pattern.png');">
-    <div class="absolute bg-[#ABABAA]/80 md:w-[1000px] md:h-[80px] rotate-45 rounded-[100px] blur-[130px]"></div>
+    <div class="hidden md:flex absolute bg-[#ABABAA]/80 md:w-[1000px] md:h-[80px] rotate-45 rounded-[100px] blur-[130px]"></div>
     <!-- navbar -->
     <nav id="home" class="flex justify-between items-center w-full max-w-[1265px] h-[50px] mx-auto px-4 mt-3">
         <div class="text-white justify-start font-semibold text-[20px]">Wojtek221.pl</div>
